syntax = "proto3";

option go_package = "github.com/ex8/tipon/tips/pb";

package pb;

service TipService {
  rpc FindTips(FindTipsReq) returns (stream FindTipsRes) {}
  rpc FindOneTip(FindOneTipReq) returns (FindOneTipRes) {}
  rpc CreateTip(CreateTipReq) returns (CreateTipRes) {}
}

message Tip {
  string id = 1;
  double amount = 2;
  string note = 3;
  string user_id = 4;
}

message FindTipsReq {}

message FindTipsRes {
  Tip tip = 1;
}

message FindOneTipReq {
  string id = 1;
}

message FindOneTipRes {
  Tip tip = 1;
}

message CreateTipReq {
  Tip tip = 1;
}

message CreateTipRes {
  Tip tip = 1;
}